2021/8/2 trigger 自動重啟 ide 開啟自動重啟功能 PageableDefault

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,14 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+<!--自動重啟-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+
 
 
     </dependencies>
